Tue Jul 29 21:33:14 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/automake.features:

          Add bzip2=1

Tue Jul 29 21:29:43 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/ace_bzip2.mpb:

          New file, overrides definitions from MPC's bzip2.mpb for
          automake build.

Tue Jul 29 19:58:22 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

          Reverted Tue Jul 29 14:21:32 UTC 2008  Adam Mitz  <mitza@ociweb.com>
          because the bug should now be fixed in TAO.

Tue Jul 29 18:11:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          TAO/tests/Bug_3000_Regression fails because that issue remains
          unresolved, added !FIXED_BUGS_ONLY.

Tue Jul 29 14:21:32 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

          TAO/tests/Bug_3163_Regression fails because that issue remains
          unresolved, added !FIXED_BUGS_ONLY.

Tue Jul 29 12:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/run_test.lst:
        * tests/Reference_Counted_Event_Handler_Test.cpp:

          Corrected the disabling of ACE_Dev_Poll_Reactor test and split
          the test into two runs once with this reactor test disabled
          and once with just this reactor test enabled (marked with
          !FIXED_BUGS_ONLY) due to internal problems with
          ACE_Dev_Poll_Reactor.

Tue Jul 29 12:14:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/run_test.lst:
        * tests/Reactor_Dispatch_Order_Test.cpp:
        * tests/Reactor_Dispatch_Order_Test_Dev_Poll.cpp:

          These tests now actually return a failure if the test failed
          instead of always returning 0. I have also split out the
          problematic part of this test re-enabled by:
          Wed Jul  9 19:07:24  2008  Steve Huston  which itself reversed: